# we-tool

./: .pre-commit-config.yaml  ARCHIVE_SUMMARY.md  DEVELOPMENT.md  Makefile.dev  NEW_CHANGES.MD  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  commands.md  deploy.sh  install.sh  makeq  pyproject.toml  we
lib/we/: args.sh  common.sh  fs.sh  project.sh  watchexec.sh
ss-test/: .gitignore  Makefile  README.md  main.py  pyproject.toml
test/: Makefile
tests/: test_we_integration.bats
tools/: __init__.py  run-we-fixture-tests.sh  uuctl.py  we-validate-makefile.sh
